fixes alignment on login text

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -668,6 +668,9 @@ fieldset {
     right: 0;
     margin-right: 32px;
     font-style: italic;
+    input {
+      margin: 0 1em 0 0;
+    }
   }
 }
 
